test/expect/cmd.cc-gnu-src-c-E.stderr.txt
^error: invalid argument '-std=gnu\+\+98' not allowed with 'C(/ObjC)?'$
